After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706042 - Fixes for the airplane mode switch
Fixes for the airplane mode switch
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-15 01:17 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-08-16 17:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: Sync airplane mode status on startup (1.75 KB, patch)
2013-08-15 01:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
network: Use HasAirplaneMode to determine whether to show the switch (1.47 KB, patch)
2013-08-15 01:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-08-15 01:17:08 UTC
Discovered in testing.
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-08-15 01:23:51 UTC
Created attachment 251674 [details] [review]
network: Sync airplane mode status on startup
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-08-15 01:23:57 UTC
Created attachment 251676 [details] [review]
network: Use HasAirplaneMode to determine whether to show the switch

Not all systems have rfkill toggles we can set; if we don't have any,
we shouldn't show any switch at all.
Comment 3 Matthias Clasen 2013-08-16 15:47:15 UTC
Review of attachment 251674 [details] [review]:

nice catch
Comment 4 Matthias Clasen 2013-08-16 15:48:42 UTC
Review of attachment 251676 [details] [review]:

I assume the HasAirplaneMode property is never going to change at runtime.

Ok then
Comment 5 Matthias Clasen 2013-08-16 16:04:27 UTC
Review of attachment 251676 [details] [review]:

I assume the HasAirplaneMode property is never going to change at runtime.

Ok then
Comment 6 Jasper St. Pierre (not reading bugmail) 2013-08-16 16:07:43 UTC
It could, but it would still be correct in this case.
Comment 7 Jasper St. Pierre (not reading bugmail) 2013-08-16 17:37:41 UTC
Attachment 251674 [details] pushed as 6d353f2 - network: Sync airplane mode status on startup
Attachment 251676 [details] pushed as a5cdade - network: Use HasAirplaneMode to determine whether to show the switch