network: Sync airplane mode status on startup

https://bugzilla.gnome.org/show_bug.cgi?id=706042